--- a/public/package.json
+++ b/public/package.json
@@ -13,6 +13,8 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "firebase": "^9.16.0"
+    "firebase": "^9.16.0",
+    "firebaseui": "^6.0.2",
+    "sass": "^1.57.1"
   }
 }
